syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/protobuf/timestamp.proto";

message AppInstance {
    uint64 id = 1;

    uint64 tenantId = 2;
    uint64 userId = 3;
    
    uint64 appId = 4;
    uint64 workspaceId = 5;
    uint64 workbenchId = 6;
    
    string status = 7;

    uint32 initialResolutionWidth = 8;
    uint32 initialResolutionHeight = 9;
    
    google.protobuf.Timestamp createdAt = 10;
    google.protobuf.Timestamp updatedAt = 11;
}
