syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";

import "common.proto";
import "workbench.proto";
import "user.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "chorus workbench service";
        version: "1.0";
        contact: {
            name: "chorus workbench service";
            url: "https://github.com/CHORUS-TRE/chorus-backend";
            email: "dev@chorus-tre.ch";
        };
    };
    schemes: HTTP;
    consumes: "application/json";
    produces: "application/json";
};

message ListWorkbenchsRequest {
    PaginationQuery pagination = 1;
    optional WorkbenchFilter filter = 2;
}
message ListWorkbenchsReply {
    ListWorkbenchsResult result = 1;
    optional PaginationResult pagination = 2;
}
message ListWorkbenchsResult {
    repeated Workbench workbenchs = 1;
}
message WorkbenchFilter {
    repeated uint64 workspace_ids_in = 1;
}

message GetWorkbenchRequest {
    uint64 id = 1;
}
message GetWorkbenchReply {
    GetWorkbenchResult result = 1;
}
message GetWorkbenchResult {
    Workbench workbench = 1;
}

message CreateWorkbenchReply {
    CreateWorkbenchResult result = 1;
}
message CreateWorkbenchResult {
    Workbench workbench = 1;
}

message UpdateWorkbenchReply {
    UpdateWorkbenchResult result = 1;
}
message UpdateWorkbenchResult {
    Workbench workbench = 1;
}

message ManageUserRoleInWorkbenchRequest {
    uint64 id = 1;
    uint64 userId = 2;
    Role role = 3;
}
message ManageUserRoleInWorkbenchReply {
    ManageUserRoleInWorkbenchResult result = 1;
}
message ManageUserRoleInWorkbenchResult {
    Workbench workbench = 1;
}

message RemoveUserFromWorkbenchRequest {
    uint64 id = 1;
    uint64 userId = 2;
}
message RemoveUserFromWorkbenchReply {
    RemoveUserFromWorkbenchResult result = 1;
}
message RemoveUserFromWorkbenchResult {
    Workbench workbench = 1;
}


message DeleteWorkbenchRequest {
    uint64  id = 1;
}
message DeleteWorkbenchReply {
    DeleteWorkbenchResult result = 1;
}
message DeleteWorkbenchResult {}


service WorkbenchService {
    rpc GetWorkbench(GetWorkbenchRequest) returns (GetWorkbenchReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/workbenchs/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get a workbench";
            description: "This endpoint returns a workbench";
            tags: "WorkbenchService";
        };
    };

    rpc ListWorkbenchs(ListWorkbenchsRequest) returns (ListWorkbenchsReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/workbenchs"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List workbenchs";
            description: "This endpoint returns a list of workbenchs";
            tags: "WorkbenchService";
        };
    };

    rpc CreateWorkbench(Workbench) returns (CreateWorkbenchReply) {
        option (google.api.http) = {
            post: "/api/rest/v1/workbenchs"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Create a workbench";
            description: "This endpoint creates a workbench";
            tags: "WorkbenchService";
        };
    };

    rpc UpdateWorkbench(Workbench) returns (UpdateWorkbenchReply) {
        option (google.api.http) = {
            put: "/api/rest/v1/workbenchs"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Update a workbench";
            description: "This endpoint updates a workbench";
            tags: "WorkbenchService";
        };
    };

    rpc ManageUserRoleInWorkbench(ManageUserRoleInWorkbenchRequest) returns (ManageUserRoleInWorkbenchReply) {
        option (google.api.http) = {
            post: "/api/rest/v1/workbenchs/{id}/user/{userId}/role"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Manage a user's role in a workbench";
            description: "This endpoint manages a user's role in a workbench";
            tags: "WorkbenchService";
        };
    };

    rpc RemoveUserFromWorkbench(RemoveUserFromWorkbenchRequest) returns (RemoveUserFromWorkbenchReply) {
        option (google.api.http) = {
            delete: "/api/rest/v1/workbenchs/{id}/user/{userId}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Remove a user from a workbench";
            description: "This endpoint removes a user from a workbench";
            tags: "WorkbenchService";
        };
    }

    rpc DeleteWorkbench(DeleteWorkbenchRequest) returns (DeleteWorkbenchReply) {
        option (google.api.http) = {
            delete: "/api/rest/v1/workbenchs/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Delete a workbench";
            description: "This endpoint deletes a workbench";
            tags: "WorkbenchService";
        };
    };
}
